@@ -7,4 +7,6 @@
 
 int Cookfs_InitVfsMountCmd(Tcl_Interp *interp);
 
+int Cookfs_Mount(Tcl_Interp *interp, Tcl_Obj *archive, Tcl_Obj *local);
+
 #endif /* COOKFS_VFSCMD_H */
